DDMORE-1173:Maven module creating nonmem see bundle containing Nonmem installation, converter and connector.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@ Thumbs.db
 ######################
 *.log
 
+
+######################
+# Maven files
+######################
+
+target/
+
 ######################
 # NONMEM files
 ######################
@@ -23,3 +30,5 @@ nm*
 *CD
 NONMEM_SEE
 TEST
+
+
