--- a/nonmem-see-plugin/pom.xml
+++ b/nonmem-see-plugin/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.ddmore</groupId>
     <artifactId>nonmem-see-plugin</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>SEE NONMEM Plugin</name>
     <packaging>pom</packaging>
     <properties>
@@ -29,12 +29,12 @@
         <dependency>
             <groupId>eu.ddmore</groupId>
             <artifactId>converter-nonmem</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.mango</groupId>
             <artifactId>windows-nonmem</artifactId>
-            <version>3.0.18-ddmore-SNAPSHOT</version>
+            <version>3.0.18-ddmore</version>
             <type>jar</type>
         </dependency>
     </dependencies>
