DDMORE-1582: Introduce an assembly without nonmem installation.

--- a/nonmem-see-plugin/pom.xml
+++ b/nonmem-see-plugin/pom.xml
@@ -89,6 +89,7 @@
                         <configuration>
                             <descriptors>
                                 <descriptor>${basedir}/src/main/assembly/bundle.xml</descriptor>
+                                <descriptor>${basedir}/src/main/assembly/bundle-with-nonmem.xml</descriptor>
                             </descriptors>
                         </configuration>
                         <id>make-exec</id>
